--- a/STARTER.HTML
+++ b/STARTER.HTML
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="CSS/normalize thing.css          " />
     <link rel="stylesheet" href="CSS/CSS.CSS.CSS.CSS" />
     <script src="JS.JS.JS.JS"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+      accusamus eaque et illum facilis consequuntur molestiae nostrum. Officiis,
+      odio voluptate.
+    </p>
+  </body>
 </html>
