--- a/STARTER.HTML
+++ b/STARTER.HTML
@@ -15,13 +15,6 @@
     />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-      accusamus eaque et illum facilis consequuntur molestiae nostrum. Officiis,
-      odio voluptate.
-    </p>
+<a href="#" class="link-arrow">learn more</a>
   </body>
 </html>
