--- a/STARTER.HTML
+++ b/STARTER.HTML
@@ -15,6 +15,10 @@
     />
   </head>
   <body>
-<a href="#" class="link-arrow">learn more</a>
+    <ul class="list">
+      <li>class"list_item">Item 1</li>
+      <li>class"list_item">Item 2</li>
+      <li>class"list_item">Item 3</li>
+    </ul>
   </body>
 </html>
