--- a/STARTER.HTML
+++ b/STARTER.HTML
@@ -15,10 +15,10 @@
     />
   </head>
   <body>
-    <ul class="list">
-      <li>class"list_item">Item 1</li>
-      <li>class"list_item">Item 2</li>
-      <li>class"list_item">Item 3</li>
+    <ul class="list list--tick">
+      <li class"list_item">Item 1</li>
+      <li class"list_item">Item 2</li>
+      <li class"list_item">Item 3</li>
     </ul>
   </body>
 </html>
