--- a/STARTER.HTML
+++ b/STARTER.HTML
@@ -15,10 +15,8 @@
     />
   </head>
   <body>
-    <ul class="list list--tick">
-      <li class"list_item">Item 1</li>
-      <li class"list_item">Item 2</li>
-      <li class"list_item">Item 3</li>
-    </ul>
+   <svg class="icon icon--primary">
+    <use xlink:href="images/sprite.svg#wordpress"></use>
+   </svg>
   </body>
 </html>
