--- a/STARTER.HTML
+++ b/STARTER.HTML
@@ -15,10 +15,10 @@
     />
   </head>
   <body>
-    <ul class="list">
-      <li>class"list_item">Item 1</li>
-      <li>class"list_item">Item 2</li>
-      <li>class"list_item">Item 3</li>
-    </ul>
+    <span class="icon-container">
+      <svg class="icon" viewBox="0 0 32 32">
+        <use xlink:href="Images/sprite.svg#wordpress"></use>
+      </svg>
+    </span>
   </body>
 </html>
