--- a/STARTER.HTML
+++ b/STARTER.HTML
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
-    <button class="btn btn--primary">Buy Now</button>
+    <button class="btn btn--primary btn--block">Buy Now</button>
+    <a href="#" class="btn btn--secondary btn--block">buy now</a>
   </body>
 </html>
