--- a/STARTER.HTML
+++ b/STARTER.HTML
@@ -15,5 +15,21 @@
     />
   </head>
   <body>
+  </span>
+  <div class="input-group">
+    <span class="icon-container">
+      <svg class="icon icon--primary">
+        <use xlink:href="images/sprite.svg#wordpress"></use>
+      </svg>
+    </span>
+
+    <input 
+    type="text"
+     class="input"
+      placeholder="Enter domain name here...">
+    </input>
+    
+    </div>
+  
   </body>
 </html>
