--- a/STARTER.HTML
+++ b/STARTER.HTML
@@ -15,21 +15,14 @@
     />
   </head>
   <body>
-  </span>
-  <div class="input-group">
-    <span class="icon-container">
-      <svg class="icon icon--primary">
-        <use xlink:href="images/sprite.svg#wordpress"></use>
-      </svg>
-    </span>
-
-    <input 
-    type="text"
-     class="input"
-      placeholder="Enter domain name here...">
-    </input>
-    
+    <div style="width: 30%; padding: 4rem">
+      <div class="card card--secondary">
+        <header class="card_header">Cards Title</header>
+        <div class="card_body">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci,
+          sunt.
+        </div>
+      </div>
     </div>
-  
   </body>
 </html>
