--- a/STARTER.HTML
+++ b/STARTER.HTML
@@ -16,11 +16,19 @@
   </head>
   <body>
     <div style="width: 30%; padding: 4rem">
-      <div class="card card--secondary">
-        <header class="card_header">Cards Title</header>
-        <div class="card_body">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci,
-          sunt.
+      <div class="plan">
+        <div class="card card--secondary">
+          <header class="card__header">
+            <h3 class="plan__name">Entry</h3>
+            <span class="plan__price">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge--small">10% OFF</span>
+            <span class="plan_description">Easy start on the cloud</span>
+          </header>
+          <div class="card__body">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci,
+            sunt.
+          </div>
         </div>
       </div>
     </div>
